<resources>
    <string name="app_name">SignUp</string>
    <!--    Main-->
    <string name="title">회원가입</string>
    <string name="e_mail">이메일</string>
    <string name="password">패스워드</string>
    <string name="password2">패스워드 확인</string>
    <string name="name">이름</string>
    <string name="separate">-</string>
    <string name="sex">성별</string>
    <string name="permission">약관동의</string>
    <string name="sign_up">회원가입</string>
    <string name="identify">주민등록번호(- 포함)</string>

    <!--    Dialog-->
    <string name="submit">확인</string>
    <string name="all_permission">전체동의</string>
    <string name="usable_permission">이용약관동의(필수)</string>
    <string name="third_permission">제3자 이용약관동의(필수)</string>
    <string name="marketing_permission">마케팅수신동의(선택)</string>

    <!--    Const util-->
    <string name="email_err">이메일이 올바르지 않습니다.</string>
    <string name="email_success">올바른 이메일 입니다.</string>
    <string name="pw_success">암호가 올바릅니다.</string>
    <string name="pw_err">암호가 올바르지 않습니다.</string>
    <string name="name_success">올바른 이름입니다.</string>
    <string name="name_err">이름은 10글자를 넘을 수 없습니다.</string>
    <string name="id_success">올바른 주민번호입니다.</string>
    <string name="id_err">잘몬된 주민번호입니다.</string>
    <string name="error_404">알 수 없는 오류입니다.</string>
    <string name="error_401">이미 가입된 회원입니다.</string>


</resources>
