<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="rainist.assignment.util.ValidationUtil.IdentifyState" />

        <variable
            name="vm"
            type="rainist.assignment.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/main_font"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/email_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/email_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/main_font"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailSubject"
                        android:text="@={vm.emailText}" />

                    <TextView
                        android:id="@+id/email_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/main_font"
                        android:gravity="center"
                        android:text="@{vm.emailStateText}"
                        android:textColor="@{vm.emailState ? @color/blue : @color/red}"
                        android:textSize="12sp"
                        android:visibility="@{vm.emailText.empty ? View.GONE : View.VISIBLE}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/password_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/main_font"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:text="@={vm.passwordText}"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/password2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/main_font"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/password_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/main_font"
                        android:gravity="center"
                        android:text="@{vm.passwordStateText}"
                        android:textColor="@{vm.passwordState ? @color/blue : @color/red}"
                        android:textSize="12sp"
                        android:visibility="@{vm.passwordText.empty ? View.GONE : View.VISIBLE}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/name_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:ems="10"
                        android:fontFamily="@font/main_font"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:text="@={vm.nameText}" />

                    <TextView
                        android:id="@+id/name_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/main_font"
                        android:gravity="center"
                        android:text="@{vm.nameStateText}"
                        android:textColor="@{vm.nameState ? @color/blue : @color/red}"
                        android:textSize="12sp"
                        android:visibility="@{vm.nameText.empty ? View.GONE: View.VISIBLE}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/identify_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/explain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/main_font"
                        android:gravity="center"
                        android:text="주민등록번호" />

                    <EditText
                        android:id="@+id/identify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:ems="6"
                        android:fontFamily="@font/main_font"
                        android:inputType="number"
                        android:text="@{vm.identifyText}" />

                    <TextView
                        android:id="@+id/identify_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/main_font"
                        android:gravity="center"
                        android:text="@{vm.identifyStateText}"
                        android:textColor="@{vm.identifyState ? @color/blue : @color/red}"
                        android:textSize="12sp"
                        android:visibility="@{vm.identifyStateText.empty ? View.GONE: View.VISIBLE}" />

                    <LinearLayout
                        android:id="@+id/sex_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/main_font"
                            android:gravity="right"
                            android:text="@string/sex"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/sex"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/main_font"
                            android:gravity="left"
                            app:setSex="@{vm.sex}" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/main_font"
                    android:text="@string/permission" />

                <Button
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/main_font"
                    android:text="SingUp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>